--- a/structure.html
+++ b/structure.html
@@ -24,11 +24,11 @@
                 <article>
 
                     <ol>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
+                        <li>Item 1</li>
                     </ol>
                 </article>
 
@@ -39,9 +39,9 @@
         </aside>
         <footer>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
             </ul>
         </footer>
     </body>
